--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,11 +23,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 1.8
+    - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '1.8'
-        distribution: 'adopt'
+        java-version: '11'
+        distribution: 'temurin'
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
